# marcos

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  config.example.toml  theme.example.toml
.github/: dependabot.yml
assets/: style.toml
src/: config.rs  error.rs  fs.rs  lib.rs  main.rs  ui.rs  utils.rs
src/config/: keys.rs  mod.rs  options.rs
src/core/: app.rs  log.rs  mod.rs
src/events/: input.rs
src/fs/: metadata.rs  mod.rs
src/ui/: draw.rs  mod.rs  multi_select.rs  tab.rs  view.rs
src/utils/: filter.rs  info.rs  logger.rs  mod.rs
