[package]
name = "marcos"
version = "0.1.0"
authors = ["Hitesh Paul <hiteshpaul94@gmail.com>"]

[dependencies]
termion = "*"
log = "0.4"
fern = "0.5"
clap = "2"
fsort = "1"

[dependencies.cursive]
version = "0.9"
default-features = true
# features = ["termion-backend"]


# Some crates to consider
# fsort
# tokio-fs
# sys-info
# walkdir
# fs_extra
# fs_swap
# alphanumeric-sort
# path_abs
